data/derived/comb/progs/unify/prog7655.ml.out
Characters 492-495:
  | NewOp1(e1, e2, e3)     -> "(" "1/sin(pi*" ^ exprToString e1 ^ ")" ^ "cos(pi*" ^ exprToString e1 ^ ")" ^ "sin(pi*" ^ exprToString e1 ^ ")" ^")"
                              ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
